les formulaires, les inputs, etc

--- a/index.html
+++ b/index.html
@@ -312,5 +312,65 @@
             </tr>
         </tbody>
     </table>
+    <hr>
+    <h2>Les formulaires</h2>
+    <!-- Input text -->
+     <label for="texte">Un input text</label><br>
+     <input type="text" name="texte" id="" placeholder="Un input text">
+     <br>
+    <!-- Input password -->
+     <label for="psw">Un input password</label><br>
+     <input type="password" name="psw" id="" maxlength="3">
+     <br>
+    <!-- Input color -->
+     <label for="color">Une couleur</label><br>
+     <input type="color" name="color" id="">
+     <br>
+    <!-- Input date -->
+     <label for="date">Une date</label><br>
+     <input type="date" name="date" id="">
+     <br>
+    <!-- Input datetime -->
+     <label for="datetime">Date et heure</label><br>
+     <input type="datetime-local" name="datetime" id="">
+     <br>
+    <!-- Input time -->
+     <label for="time">L'heure</label><br>
+     <input type="time" name="time" id="" min="09:00" max="19:00">
+     <br>
+    <!-- Input range -->
+     <label for="range">slider</label><br>
+     <input type="range" name="range" id="" min="0" max="10" step="1">
+     <br>
+     <!-- Textarea -->
+      <label for="Textarea">Zone de texte</label><br>
+      <textarea name="Textarea" id="" cols="50" rows="6"></textarea>
+      <br>
+      <!-- Le select -->
+       <label for="select">Un select</label><br>
+       <select name="" id="">  
+            <option value="">Népal</option>
+            <option value="">USA</option>
+            <option value="">Lux</option>
+            <option value="" selected>France</option>
+            <option value="">Italie</option>
+       </select>
+       <br>
+       <!-- Checkbox -->
+    <input type="checkbox" name="hobbies" id="">
+    <label for="lecture">Lecture</label>
+    <input type="checkbox" name="hobbies" id="">
+    <label for="lecture">Musique</label>
+    <input type="checkbox" name="hobbies" id="">
+    <label for="lecture">Voyage</label>
+    <br>
+       <!-- Radios -->
+    <input type="radio" name="genre" id="">
+    <label for="genre">Femme</label>
+    <input type="radio" name="genre" id="">
+    <label for="genre">Homme</label>
+    <input type="radio" name="genre" id="">
+    <label for="genre">Non-binaire</label>
+
 </body>
 </html>
