--- a/index.html
+++ b/index.html
@@ -371,6 +371,6 @@
     <label for="genre">Homme</label>
     <input type="radio" name="genre" id="">
     <label for="genre">Non-binaire</label>
-    <p>Test</p>
+    <p>test</p>
 </body>
 </html>
