--- a/index.html
+++ b/index.html
@@ -264,13 +264,13 @@
             </tr>
             <tr>
                 <td rowspan="2" class="green"></td>
-                <td rowspan="2" class="yellow"></td>
-                <td rowspan="2" class="yellow"></td>
+                <td colspan="2" class="yellow"></td>
                 <td rowspan="2" class="orange"></td>
             </tr>
             <tr>
                 <td rowspan="2" class="green"></td>
                 <td rowspan="2" class="purple"></td>
+                <td colspan="2" class="yellow"></td>
                 <td rowspan="2" class="orange"></td>
             </tr>
             <tr>
