--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Mes cours FrontEnd</h1>
     <ul id="liste_cours">
         <li><a href="les_bases.html">Les bases</a></li>
-        <li><a href="#">Le CSS</a></li>
+        <li><a href="le_css.html">Le CSS</a></li>
         <li><a href="#">Les flex et grid</a></li>
         <li><a href="#">Les positions et overflow</a></li>
         <li><a href="#">Le responsive design</a></li>
