Début page le CSS

--- a/le_css.html
+++ b/le_css.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>CSS : CASCADING STYLE SHEET ou FEUILLE DE STYLE EN CASCADE</h1>
+    <h2>Les blocs</h2>
+
+    <div class="square green"></div>
+    <div class="square blue"></div>
+    <div class="square orange"></div>
 </body>
 </html>
