Barre de navigation, les blocs, les combinateurs CSS

--- a/le_css.html
+++ b/le_css.html
@@ -12,6 +12,93 @@
 
     <div class="square green"></div>
     <div class="square blue"></div>
-    <div class="square orange"></div>
+    <div class="circle orange"></div>
+
+    <p>Les div passent à la ligne à chaque fois qu'on les appelle, elles sont par défaut en display:block</p>
+    <p>La balise p est aussi en display:block</p>
+    <p>La balise <span class="text-color-red">span</span> est en display:<span class="text-color-red">inline</span></p>
+    <div class="cobaye blue square"></div>
+    <div class="cobaye2 blue square"></div>
+    <div class="cobaye2 yellow square"></div>
+    <div class="cobaye2 purple square"></div>
+    <div class="cobaye2 blue square"></div>
+    <div class="cobaye2 yellow square"></div>
+    <div class="cobaye2 purple square"></div>
+    <div class="cobaye2 blue square"></div>
+    <div class="cobaye2 yellow square"></div>
+    <div class="cobaye2 purple square"></div>
+    <div class="cobaye2 blue square"></div>
+    <div class="cobaye2 yellow square"></div>
+    <div class="cobaye2 purple square"></div>
+    <div class="cobaye2 blue square"></div>
+    <div class="cobaye2 yellow square"></div>
+    <div class="cobaye2 purple square"></div>
+    <div class="cobaye2 blue square"></div>
+    <div class="cobaye2 yellow square"></div>
+    <div class="cobaye2 purple square"></div>
+    <div class="cobaye2 blue square"></div>
+    <div class="cobaye2 yellow square"></div>
+    <div class="cobaye2 purple square"></div>
+    <div class="cobaye2 blue square"></div>
+    <div class="cobaye2 yellow square"></div>
+    <div class="cobaye2 purple square"></div>
+    <div class="cobaye2 blue square"></div>
+    <div class="cobaye2 yellow square"></div>
+    <div class="cobaye2 purple square"></div>
+    <div class="cobaye2 blue square"></div>
+    <div class="cobaye2 yellow square"></div>
+    <div class="cobaye2 purple square"></div>
+    <div class="cobaye2 blue square"></div>
+    <div class="cobaye2 yellow square"></div>
+    <div class="cobaye2 purple square"></div>
+    <div class="cobaye2 blue square"></div>
+    <div class="cobaye2 yellow square"></div>
+    <div class="cobaye2 purple square"></div>
+
+    <!-- Exemple de navbar -->
+    <div class="nav-bar">
+    <ul class="nav-bar-list left">
+        <li><a href="#">Catalogue</a></li>
+        <li><a href="#">Promos</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+    </div>
+
+    <hr>
+    <h2>Les combinateurs</h2>
+    <p>Les <span class="text-color-red">combinateurs</span> CSS permettent de cibler des éléments HTML en fonction de leur relation avec d'autres éléments</p>
+    <p>Imaginons deux éléments HTML E et F</p>
+    <ol>
+    <li>Enfant direct: <code>E > F</code></li>
+    <li>Tous les enfants: <code>E F</code></li>
+    <li>Les fratries adjacentes: <code>E + F</code></li>
+    <li>Tous les frères: <code>E ~ F</code></li>
+    </ol>
+
+    <h3>1. Enfant direct</h3>
+    <div class="parent">
+        <p>Enfant direct</p>
+        <div>
+            <p>Enfant indirect</p>
+        </div>
+    </div>
+    <h3>2. Tous les enfants</h3>
+    <div class="all-children-parent">
+        <p>Enfant direct</p>
+        <div>
+            <p>Enfant indirect</p>
+        </div>
+    </div>
+    <h3>3. Fratrie adjacente</h3>
+    <h4>Titre Frère</h4>
+    <p>Frère1</p>
+    <p>Frère2</p>
+    <p>Frère3</p>
+
+    <h3>4. Tous les frères</h3>
+    <h5>Titre Frère très petit</h5>
+    <p>Frère1</p>
+    <p>Frère2</p>
+    <p>Frère3</p>
 </body>
 </html>
