--- a/les_bases.html
+++ b/les_bases.html
@@ -349,7 +349,7 @@
       <!-- Le select -->
        <label for="select">Un select</label><br>
        <select name="" id="">  
-            <optindex.htmlion value="">Népal</option>
+            <option value="">Népal</option>
             <option value="">USA</option>
             <option value="">Lux</option>
             <option value="" selected>France</option>
