--- a/le_css.html
+++ b/le_css.html
@@ -89,16 +89,51 @@
             <p>Enfant indirect</p>
         </div>
     </div>
-    <h3>3. Fratrie adjacente</h3>
-    <h4>Titre Frère</h4>
-    <p>Frère1</p>
-    <p>Frère2</p>
-    <p>Frère3</p>
+    <div>
+        <h3>3. Fratrie adjacente</h3>
+        <h4>Titre Frère</h4>
+        <p>Frère1</p>
+        <p>Frère2</p>
+        <p>Frère3</p>
+    </div>
 
-    <h3>4. Tous les frères</h3>
-    <h5>Titre Frère très petit</h5>
-    <p>Frère1</p>
-    <p>Frère2</p>
-    <p>Frère3</p>
+    <div>
+        <h3>4. Tous les frères</h3>
+        <h5>Titre Frère très petit</h5>
+        <p>Frère1</p>
+        <p>Frère2</p>
+        <p>Frère3</p>
+    </div>
+
+    <div>
+        <h2>Les pseudo-éléments</h2>
+        <p>Un pseudo-élément CSS est un mot clé ajouté à un sélecteur qui permet de mettre en forme une partie spécifique du ou des éléments sélectionnés</p>
+        <p class="text-chiant">Ô merveilles ineffables des pseudo-sélecteurs CSS ! Sublimes artisans de la précision et de la grâce, ils transforment la simple feuille de style en une symphonie visuelle, une fresque numérique où chaque élément s’incline devant leur puissance. Grâce à eux, le banal devient extraordinaire : un simple lien s’embrase au survol tel un phénix renaissant, une première lettre se dresse avec la majesté d’une initiale enluminée, et les moindres recoins d’une liste prennent vie sous la caresse raffinée de leurs enchantements. Véritables alchimistes du web, les pseudo-sélecteurs transforment le code en poésie et l’écran en cathédrale de lumière. Louons à jamais ces prodiges discrets, qui font vibrer l’âme de chaque site avec l’éclat du sublime !
+        </p>
+        <a id="super-button" href="#">Likez moi</a>
+    </div>
+    <hr>
+    <h2>EXO</h2>
+    <div class="container">
+        <h1>Titre principal</h1>
+        <p>Paragraphe 1</p>
+        
+        <div class="box">
+            <h2>Sous-titre 1</h2>
+            <p>Paragraphe 2</p>
+            <span>Span dans .box</span>
+        </div>
+
+        <p>Paragraphe 3</p>
+        <span>Span général</span>
+
+        <div class="box">
+            <p>Paragraphe 4</p>
+            <h2>Sous-titre 2</h2>
+            <span>Autre span</span>
+        </div>
+    </div>
+
+    <h2>Les polices d'écritures</h2>
 </body>
 </html>
