--- a/exercice_flex.html
+++ b/exercice_flex.html
@@ -41,6 +41,21 @@
         <div class="items col grey"></div>
     </div>
 
-    <div></div>
+    <hr>
+    <h2>TP Flex 1</h2>
+
+    <div class="main flex-col">
+        <div class="block-h40">
+            <div class="block-w70"></div>
+            <div class="block-w30"></div>
+        </div>
+        <div class="block-h60">
+            <div class="block-w50"></div>
+            <div class="block-w50 flex-col">
+                <div class="block-h50"></div>
+                <div class="block-h50"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
