--- a/exercice_flex_2.html
+++ b/exercice_flex_2.html
@@ -41,7 +41,7 @@
                     <li class="left-nav-item"><a href="#">Paramètres</a></li>
                 </ul>
             </div>
-            <div id="middle">
+            <div id="middle" class="flex">
                 <div class="middle-first-row flex">
                     <div>Header</div>
                     <div class="stats flex">
@@ -50,9 +50,48 @@
                         <div class="stat flex center">Stat C</div>
                     </div>
                 </div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div id="tasks" class="flex">
+                    <div id="to-do" class="flex">
+                        <div class="status">A faire</div>
+                        <div class="size-m">Tâche 1</div>
+                        <div class="size-l">Tâche 2</div>
+                        <div class="size-m">Tâche 3</div>
+                        <div class="size-m">Tâche 4</div>
+                    </div>
+                    <div id="wip" class="flex">
+                        <div class="status">En cours</div>
+                        <div class="size-m">Tâche 5</div>
+                        <div class="size-m">Tâche 6</div>
+                        <div class="size-l"></div>
+                        <div class="size-m">Tâche 8</div>
+                    </div>
+                    <div id="done" class="flex">
+                        <div class="status">Terminé</div>
+                        <div class="size-m">Tâche 9</div>
+                        <div class="size-m">Tâche 10</div>
+                        <div class="size-m small-width">Tâche 11</div>
+                        <div class="size-l">Tâche 12</div>
+                    </div>
+                </div>
+                <div id="numbers" class="flex">
+                    <div class="number"></div>
+                    <div class="number"></div>
+                    <div class="number"></div>
+                    <div class="number"></div>
+                    <div class="number"></div>
+                    <div class="number"></div>
+                    <div class="number"></div>
+                    <div class="number"></div>
+                    <div class="number"></div>
+                    <div class="number"></div>
+                    <div class="number"></div>
+                    <div class="number"></div>
+                </div>
+                <div id="jambon-beurre" class="flex">
+                    <div>Jambon</div>
+                    <div>Beurre</div>
+                    <div>Haut</div>
+                </div>
             </div>
             <div id="right" class="flex">
                 <div class="flex">
@@ -64,12 +103,12 @@
                             <p>Prénom</p>
                         </div>
                     </div>
-                    <div><a href="#">Suivre</a></div>
+                    <div id="follow"><a href="#">Suivre</a></div>
                 </div>
-                <div class="flex">
-                    <div>Widget 1</div>
-                    <div>Widget 2</div>
-                    <div>Widget 3</div>
+                <div id="widgets" class="flex">
+                    <div class="widget">Widget 1</div>
+                    <div class="widget">Widget 2</div>
+                    <div class="widget">Widget 3</div>
                 </div>
             </div>
         </div>
