--- a/exercice_flex_2.html
+++ b/exercice_flex_2.html
@@ -7,6 +7,7 @@
     <title>Exercice flex 2</title>
 </head>
 <body>
+    <search></search>
     <main class="flex">
         <div class="flex">
             <div class="logo flex center"><p>.logo</p></div>
