--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="le_css.html">Le CSS</a></li>
         <li><a href="flex.html">Les flex et grid</a></li>
         <li><a href="exercice_flex.html">Exercices Flex</a></li>
-        <li><a href="#">Les positions et overflow</a></li>
+        <li><a href="position.html">Les positions et overflow</a></li>
         <li><a href="#">Le responsive design</a></li>
         <li><a href="#">Les transitions et animations</a></li>
         <li><a href="#">Le Sass</a></li>
