encore des exos

--- a/exo_position_2.html
+++ b/exo_position_2.html
@@ -9,14 +9,17 @@
 <body>
     <div class="card">
         <a href="#">Modifier</a>
-        <div class="round">
-            <img src="img/kempere.jpg" alt="Photo de profil">
+        <div class="circles">
+            <div class="round">
+                <img src="img/kempere.jpg" alt="Photo de profil">
+            </div>
+            <div class="dot"></div>
         </div>
-        <div>
-            <h2>E.Kempere</h2>
+        <div class="title">
+            <h2>E.Kemper</h2>
             <p class="sub">Un GRAND homme bon.</p>
         </div>
-        <div>
+        <div class="stats">
             <div>
                 <div class="num">120</div>
                 <div class="stat">Abonnés</div>
