--- a/flex.html
+++ b/flex.html
@@ -218,5 +218,28 @@
         <div class="box-flex"></div>
         <div class="box-flex"></div>
     </div>
+
+<h3>flex</h3>
+<div class="flex aqua">
+    <div class="flex1 blue"><p>1</p></div>
+    <div class="flex1 orange"><p>1</p></div>
+    <div class="flex2 purple"><p>2</p></div>
+    <div class="flex1 green"><p>1</p></div>
+    <div class="flex2 red"><p>2</p></div>
+</div>
+<div class="flex aqua">
+    <div class="flex1 blue"><p>1</p></div>
+    <div class="flex2 orange"><p>2</p></div>
+    <div class="flex2 purple"><p>2</p></div>
+    <div class="flex2 green"><p>2</p></div>
+    <div class="flex2 red"><p>2</p></div>
+</div>
+<div class="flex aqua">
+    <div class="flex3 blue"><p>3</p></div>
+    <div class="flex3 orange"><p>3</p></div>
+    <div class="flex3 purple"><p>3</p></div>
+    <div class="flex2 green"><p>2</p></div>
+    <div class="flex1 red"><p>1</p></div>
+</div>
 </body>
 </html>
