--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="flex.html">Les flex et grid</a></li>
         <li><a href="exercice_flex.html">Exercices Flex</a></li>
         <li><a href="position.html">Les positions et overflow</a></li>
-        <li><a href="#">Le responsive design</a></li>
+        <li><a href="responsive.html">Le responsive design</a></li>
         <li><a href="#">Les transitions et animations</a></li>
         <li><a href="#">Le Sass</a></li>
         <li><a href="#">Bootstrap</a></li>
